# src/libs/Replicate/Generated/Replicate.IReplicateApi.ModelsCreate.g.cs
@@ -37,7 +37,7 @@ namespace Replicate
         /// <param name="request"></param>
         /// <param name="cancellationToken">The token to cancel the operation with</param>
         /// <exception cref="global::Replicate.ApiException"></exception>
-        global::System.Threading.Tasks.Task<global::Replicate.ModelsCreateResponse> ModelsCreateAsync(
+        global::System.Threading.Tasks.Task<global::Replicate.SchemasModelResponse> ModelsCreateAsync(
             global::Replicate.ModelsCreateRequest request,
             global::System.Threading.CancellationToken cancellationToken = default);
 
@@ -100,7 +100,7 @@ namespace Replicate
         /// </param>
         /// <param name="cancellationToken">The token to cancel the operation with</param>
         /// <exception cref="global::System.InvalidOperationException"></exception>
-        global::System.Threading.Tasks.Task<global::Replicate.ModelsCreateResponse> ModelsCreateAsync(
+        global::System.Threading.Tasks.Task<global::Replicate.SchemasModelResponse> ModelsCreateAsync(
             string hardware,
             string name,
             string owner,
