# src/libs/Replicate/Generated/Replicate.IReplicateApi.PredictionsGet.g.cs
@@ -55,7 +55,7 @@ namespace Replicate
         /// <param name="predictionId"></param>
         /// <param name="cancellationToken">The token to cancel the operation with</param>
         /// <exception cref="global::Replicate.ApiException"></exception>
-        global::System.Threading.Tasks.Task<global::Replicate.PredictionResponse> PredictionsGetAsync(
+        global::System.Threading.Tasks.Task<global::Replicate.SchemasPredictionResponse> PredictionsGetAsync(
             string predictionId,
             global::System.Threading.CancellationToken cancellationToken = default);
     }
