# src/libs/Replicate/Generated/Replicate.ReplicateApi.PredictionsGet.g.cs
@@ -72,7 +72,7 @@ namespace Replicate
         /// <param name="predictionId"></param>
         /// <param name="cancellationToken">The token to cancel the operation with</param>
         /// <exception cref="global::Replicate.ApiException"></exception>
-        public async global::System.Threading.Tasks.Task<global::Replicate.PredictionResponse> PredictionsGetAsync(
+        public async global::System.Threading.Tasks.Task<global::Replicate.SchemasPredictionResponse> PredictionsGetAsync(
             string predictionId,
             global::System.Threading.CancellationToken cancellationToken = default)
         {
@@ -167,7 +167,7 @@ namespace Replicate
                 }
 
                 return
-                    global::Replicate.PredictionResponse.FromJson(__content, JsonSerializerContext) ??
+                    global::Replicate.SchemasPredictionResponse.FromJson(__content, JsonSerializerContext) ??
                     throw new global::System.InvalidOperationException($"Response deserialization failed for \"{__content}\" ");
             }
             else
@@ -197,7 +197,7 @@ namespace Replicate
                 ).ConfigureAwait(false);
 
                 return
-                    await global::Replicate.PredictionResponse.FromJsonStreamAsync(__content, JsonSerializerContext).ConfigureAwait(false) ??
+                    await global::Replicate.SchemasPredictionResponse.FromJsonStreamAsync(__content, JsonSerializerContext).ConfigureAwait(false) ??
                     throw new global::System.InvalidOperationException("Response deserialization failed.");
             }
         }
