# src/libs/Replicate/openapi.yaml
@@ -368,38 +368,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  url:
-                    type: string
-                    format: string
-                  owner:
-                    type: string
-                    format: string
-                  name:
-                    type: string
-                    format: string
-                  description:
-                    type: string
-                    format: string
-                  visibility:
-                    type: string
-                    format: string
-                  github_url:
-                    type: 'null'
-                  paper_url:
-                    type: 'null'
-                  license_url:
-                    type: 'null'
-                  run_count:
-                    type: number
-                    format: int64
-                  cover_image_url:
-                    type: 'null'
-                  default_example:
-                    type: 'null'
-                  latest_version:
-                    type: 'null'
+                $ref: '#/components/schemas/schemas_model_response'
   '/models/{model_owner}/{model_name}':
     delete:
       summary: Delete a model
@@ -504,7 +473,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/prediction_response'
+                $ref: '#/components/schemas/schemas_prediction_response'
   '/models/{model_owner}/{model_name}/readme':
     get:
       summary: Get a model's README
@@ -725,7 +694,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/prediction_response'
+                $ref: '#/components/schemas/schemas_prediction_response'
   '/predictions/{prediction_id}/cancel':
     post:
       summary: Cancel a prediction
@@ -1194,82 +1163,6 @@ components:
             type: string
           description: "By default, we will send requests to your webhook URL whenever there are new outputs or the prediction has finished. You can change which events trigger webhook requests by specifying `webhook_events_filter` in the prediction request:\n\n- `start`: immediately on prediction start\n- `output`: each time a prediction generates an output (note that predictions can generate multiple outputs)\n- `logs`: each time log output is generated by a prediction\n- `completed`: when the prediction reaches a terminal state (succeeded/canceled/failed)\n\nFor example, if you only wanted requests to be sent at the start and end of the prediction, you would provide:\n\n```json\n{\n  \"version\": \"5c7d5dc6dd8bf75c1acaa8565735e7986bc5b66206b55cca93cb72c9bf15ccaa\",\n  \"input\": {\n    \"text\": \"Alice\"\n  },\n  \"webhook\": \"https://example.com/my-webhook\",\n  \"webhook_events_filter\": [\"start\", \"completed\"]\n}\n```\n\nRequests for event types `output` and `logs` will be sent at most once every 500ms. If you request `start` and `completed` webhooks, then they'll always be sent regardless of throttling.\n"
       additionalProperties: false
-    prediction_response:
-      type: object
-      properties:
-        completed_at:
-          type: string
-          format: string
-        created_at:
-          type: string
-          format: string
-        data_removed:
-          type: boolean
-        error:
-          type: 'null'
-        id:
-          type: string
-          format: string
-        input:
-          type: object
-          properties:
-            seed:
-              type: number
-              format: int64
-            steps:
-              type: number
-              format: int64
-            prompt:
-              type: string
-              format: string
-            guidance:
-              type: number
-              format: number
-            interval:
-              type: number
-              format: int64
-            aspect_ratio:
-              type: string
-              format: string
-            safety_tolerance:
-              type: number
-              format: int64
-        logs:
-          type: string
-          format: string
-        metrics:
-          type: object
-          properties:
-            image_count:
-              type: number
-              format: int64
-            predict_time:
-              type: number
-              format: number
-            total_time:
-              type: number
-              format: number
-        output:
-          type: string
-          format: string
-        started_at:
-          type: string
-          format: string
-        status:
-          type: string
-          format: string
-        urls:
-          type: object
-          properties:
-            get:
-              type: string
-              format: string
-            cancel:
-              type: string
-              format: string
-        version:
-          type: string
-          format: string
   parameters:
     parameters_prefer_header:
       name: Prefer
